--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<img src="\docs\assets\images\tim-the-beaver-3.png", alt= "Omae wa mou shindeiru">
+<img src="/docs/assets/images/tim-the-beaver-3.png", alt= "Omae wa mou shindeiru">
 </body>
 </html>
