--- a/index.html
+++ b/index.html
@@ -1,8 +1,31 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>PI Day Countdown</title>
+  <meta name="description" content="The end is nigh">
+  <meta name="author" content="Future rejected applicant">
+
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<img src="docs/assets/images/tim-the-beaver-3.png", alt= "Omae wa mou shindeiru">
+  <div id="background">
+    <div id="backgroundContainer" class="container"></div>
+    <!--<div id="overlay", class="overlay", style="display:block; background: radial-gradient(ellipse at 40% 35%, rgba(255, 0, 0, 0.75), rgba(0, 0, 0, 1) 15%)"></div>
+    <image src="Images/tim-the-unhappy-beaver.png", class="center", style="margin-top:200px"></image>-->
+    <div id="comments" style="z-index:1000"></div>
+    <div id="timerBack" style="z-index:1001"><div id="timer"></div></div>
+  </div>
+  <script src="js/utils.js"></script>
+  <script src="js/timer.js"></script>
+  <script src="js/style.js"></script>
+  <script src="js/comments.js"></script>
+  <script src="js/waves.js"></script>
+  <script src="js/rain.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
